# DPHPC-2024-Kaczmarz

./: .gitignore  CMakeLists.txt  README.md  build_all_anew.sh  clear_all_builds.sh  elementmatrix_unitsquare.txt  format_code.sh  main.c  sources.txt
generated_bvp_matrices/: CMakeLists.txt  analysis.py  cuthill.cpp  problem1_complexity1.txt  problem1_complexity1_degree2.txt  problem1_complexity1_degree3.txt  problem1_complexity2.txt  problem1_complexity2_banded.txt  problem1_complexity2_degree3.txt  problem1_complexity3.txt  problem1_complexity3_degree2.txt  problem1_complexity3_degree3.txt  problem1_complexity4.txt  problem1_complexity4_degree2.txt  problem1_complexity5.txt  problem1_complexity6.txt  problem2_complexity1.txt  problem2_complexity1_degree2.txt  problem2_complexity1_degree3.txt  problem2_complexity2.txt  problem2_complexity2_banded.txt  problem2_complexity2_degree1.txt  problem2_complexity2_degree2.txt  problem2_complexity2_degree3.txt  problem2_complexity3.txt  problem2_complexity3_banded.txt  problem2_complexity4.txt  problem2_complexity4_banded.txt  problem2_complexity4_degree2.txt  problem2_complexity5.txt  problem2_complexity5_banded.txt  problem2_complexity6.txt  problem3_complexity1_banded.txt  problem3_complexity1_degree3.txt  problem3_complexity2.txt  problem3_complexity2_banded.txt  problem3_complexity3_degree3.txt  problem3_complexity4.txt  problem3_complexity4_degree2.txt  problem3_complexity6_degree1.txt  (+2 more)
generated_bvp_matrices/classic/: problem2_complexity6.txt  problem3_complexity1.txt  problem3_complexity3.txt
generated_bvp_matrices/lambda_experiments/: carp-cg-lambda-steps-problem1_complexity3_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity3_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity5_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity2_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree1.txt.csv
generated_bvp_matrices/lambda_experiments_new/: README.txt  carp-cg-lambda-steps-problem1_complexity1_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity1_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity3_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity3_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity3_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity4_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity4_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity4_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity5_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity5_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity6_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity2_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity2_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity2_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity3_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity3_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity3_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity4_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity4_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity4_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity5_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity5_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity6_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity1_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity1_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem3_complexity2_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity2_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity2_degree3.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree3.txt.csv  (+6 more)
generated_bvp_matrices/lambda_experiments_old_relaxation/: README.txt  carp-cg-lambda-steps-problem1_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity2_degree3.txt.csv  carp-cg-lambda-steps-problem1_complexity4_degree1.txt.csv  carp-cg-lambda-steps-problem1_complexity4_degree2.txt.csv  carp-cg-lambda-steps-problem1_complexity6_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity3_degree1.txt.csv  carp-cg-lambda-steps-problem2_complexity3_degree3.txt.csv  carp-cg-lambda-steps-problem2_complexity4_degree2.txt.csv  carp-cg-lambda-steps-problem2_complexity6_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity1_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity1_degree3.txt.csv  carp-cg-lambda-steps-problem3_complexity2_degree1.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree2.txt.csv  carp-cg-lambda-steps-problem3_complexity3_degree3.txt.csv
generated_bvp_matrices/problem1/: problem1_complexity1_degree1_banded.txt  problem1_complexity1_degree2_banded.txt  problem1_complexity1_degree3_banded.txt  problem1_complexity2_degree2.txt  problem1_complexity2_degree2_banded.txt  problem1_complexity2_degree3_banded.txt  problem1_complexity3_degree1_banded.txt  problem1_complexity3_degree2_banded.txt  problem1_complexity3_degree3_banded.txt  (+4 more)
kaczmarz/: ._CMakeLists.txt  CMakeLists.txt
linear_systems/: ._CMakeLists.txt  CMakeLists.txt
mesh_builder/: ._CMakeLists.txt  CMakeLists.txt  README.md  configuration.json  dense_configuration.json  generate_meshes.sh
src/: ]  (+12 more)
(+274 files in other folders)
